[tool.poetry]
name = "adamant-schedule-bot"
version = "0.1.0"
description = "The Open Source version of the bot that runs and maintains the system behind the over 1.1 million users following SubredditOfTheDay and TinySubredditOfTheDay"
authors = ["AnnsAnn <git@annsann.eu>"]
license = "EUPL v1.2+"

[tool.poetry.dependencies]
python = "^3.10"
praw = "^7.7.1"
types-dateparser = "^1.1.4"
dateparser = "^1.2.0"
discord-webhook = "^1.3.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
